Video Texture - Video frames dropped from beginning and end #40757

Closed
opened 2014-06-22 18:23:20 +02:00 by Ron Tarrant · 7 comments

System Information
custom-built machine, Windows 7 64-bit

Blender Version
Broken: 2.70a and 2.71 RC2
Worked: 2.69 official release

Short description of error
When setting up a video texture on a plane object, frames at the beginning and end of the video are not played.

I observed this with MP4 and AVCHD (MTS) files.

And no worries. This time I reset preferences to factory defaults and tried it again before reporting this as a bug. :)

Exact steps for others to reproduce the error

add a plane
rotate 90 degrees around x (apply rotation)
resize to x=16, z=9 (apply scale)
Edit Mode
Unwrap
Viewport Shading to "Texture"
n-panel Shading to "GLSL"
add a material
under Shading, tick "Shadeless"
add a texture
type: Image or Movie
source: open a video file (MP4 or AVCHD)
Match Movie Length
tick Auto Refresh
mapping: coordinates: UV
map: UVmap

Video_Texture_Not_Playing_All_Frames.7z

**System Information** custom-built machine, Windows 7 64-bit **Blender Version** Broken: 2.70a and 2.71 RC2 Worked: 2.69 official release **Short description of error** When setting up a video texture on a plane object, frames at the beginning and end of the video are not played. I observed this with MP4 and AVCHD (MTS) files. And no worries. This time I reset preferences to factory defaults and tried it again before reporting this as a bug. :) **Exact steps for others to reproduce the error** add a plane rotate 90 degrees around x (apply rotation) resize to x=16, z=9 (apply scale) Edit Mode Unwrap Viewport Shading to "Texture" n-panel Shading to "GLSL" add a material under Shading, tick "Shadeless" add a texture type: Image or Movie source: open a video file (MP4 or AVCHD) Match Movie Length tick Auto Refresh mapping: coordinates: UV map: UVmap [Video_Texture_Not_Playing_All_Frames.7z](https://archive.blender.org/developer/F95284/Video_Texture_Not_Playing_All_Frames.7z)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rontarrant

Added subscriber: @rontarrant
Sergey Sharybin self-assigned this 2014-06-25 13:48:24 +02:00

This issue was referenced by f430127bbd

This issue was referenced by f430127bbd1ec808745ea82bbf19bff71975cb53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f430127bbd.

Closed by commit f430127bbd.

This was caused by wrong detection of the offset. Set it to 0 for your file. This offset is being calculated on the file load and it's fixed now.

This was caused by wrong detection of the offset. Set it to 0 for your file. This offset is being calculated on the file load and it's fixed now.
Author

Perfect! Thanks very much.

Perfect! Thanks very much.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40757
No description provided.