Fix T40757: Video Texture - Video frames dropped from beginning and end

it's actually a followup for 04f81c8, no need to apply offset for video files.